--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container-slider">
             <p>Touch Me</p>
             <div class="overlay">
-                <div class="text1" > Buscando Nuevos Desafios </div>
+                <div class="text1" > Buscando donde Desarrollar mis Habilidades </div>
             </div>
         </div>
 
@@ -85,7 +85,7 @@
 
 
         <div class="card-2">
-            <p>Touch Me</p>
+            <p>It's Joke</p>
             <img src="/Portafolio/img/glassesT.png" id="glasses">
         </div>
 
