--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Sobre Mi</a>
-        <a href="calculator.html">Calculadora</a>
-        <a href="gallery.html">Galeria</a>
-        <a href="listado.html">Listado</a>
-        <a href="3d.html">3D(only desktop) </a>
+        <a href="layout/calculator.html">Calculadora</a>
+        <a href="layout/gallery.html">Galeria</a>
+        <a href="layout/listado.html">Listado</a>
+        <a href="layout/3d.html">3D(only desktop) </a>
     </div>
 
 
