--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.svg" />
     <title>Francisco Guerra Portafolio</title>
 </head>
@@ -26,7 +26,7 @@
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
 
-    <script src="/js/sidebar.js"></script>
+    <script src="js/sidebar.js"></script>
 
     <div class="presentacion">
         <div class="drop-glass">
@@ -87,7 +87,7 @@
 
         <div class="card-2">
             <p>It's Joke</p>
-            <img src="/img/glassesT.png" id="glasses">
+            <img src="/Portafolio/img/glassesT.png" id="glasses">
         </div>
 
 
@@ -106,7 +106,7 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="/img/img1.jpg" style="width:100%">
+                <img src="img/img1.jpg" style="width:100%">
                 <div class="text"></div>
             </div>
 
