--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/Portafolio/css/style.css">
     <link rel="shortcut icon" href="img/favicon.svg" />
     <title>Francisco Guerra Portafolio</title>
 </head>
@@ -26,7 +26,7 @@
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
 
-    <script src="js/sidebar.js"></script>
+    <script src="/Portafolio/js/sidebar.js"></script>
 
     <div class="presentacion">
         <div class="drop-glass">
@@ -106,19 +106,19 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="img/img1.jpg" style="width:100%">
+                <img src="/Portafolio/img/img1.jpg" style="width:100%">
                 <div class="text"></div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="img/img2.jpg" style="width:100%">
+                <img src="/Portafolio/img/img2.jpg" style="width:100%">
                 <div class="text"></div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="img/img4.jpg" style="width:100%">
+                <img src="/Portafolio/img/img4.jpg" style="width:100%">
                 <div class="text"></div>
             </div>
 
@@ -135,7 +135,7 @@
         </div>
     </div>
 
-    <script src="js/slider.js"></script>
+    <script src="/Portafolio/js/slider.js"></script>
 
     
     <footer class="footer">
