--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
 
-    <script src="/Portafolio/js/sidebar.js"></script>
+    <script type="text/javascript" src="/Portafolio/js/sidebar.js"></script>
 
     <div class="presentacion">
         <div class="drop-glass">
