--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <div class="presentacion-monitor animado">
+    <div class="presentacion-monitor animado-inicio">
         
         <div class="card-3">
             <h1> Front-End </br> Developer</br> Jr</h1>
