--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
 
 
         <script src="/Portafolio/js/switchMode.js"></script>
-
-        <a href="index.html">Sobre Mi</a>
-        <a href="layout/calculator.html">Calculadora</a>
-        <a href="layout/gallery.html">Galeria</a>
-        <a href="layout/listado.html">Listado</a>
-        <a href="layout/3d.html">3D(only desktop) </a>
-        <a href="layout/3dbackground.html">No hay vuelta atras</a>
-        <a href="layout/formulario.html">Contacto</a>
-
-
+        <ul>
+            <li><a href="index.html">Sobre Mi</a></li>
+            <li><a href="layout/calculator.html">Calculadora</a></li>
+            <li><a href="layout/gallery.html">Galeria</a></li>
+            <li><a href="layout/listado.html">Listado</a></li>
+            <li><a href="layout/3d.html">3D(only desktop) </a></li>
+            <li><a href="layout/3dbackground.html">No hay vuelta atras</a></li>
+            <li><a href="layout/formulario.html">Contacto</a></li>
+        </ul>
     </div>
 
 
@@ -118,7 +117,7 @@
         </div>
         <div class="card-1">
 
-            <h1 class="demo">Francisco Javier Guerra Cárdenas</h1>
+            <h1 class="demo">Francisco Javier Guerra Cárdenas  </h1>
             <!-- <button onclick="typeWriter()">Click me</button> -->
             <p> Tecnico Superior Analista Programador</br>
                 Front End Jr</br>
@@ -197,7 +196,7 @@
 
 
         <div class="card-2">
-            <p>The Life It's Joke</p>
+            <p>Life is a Joke</p>
             <img src="/Portafolio/img/glassesT.png" id="glasses">
         </div>
 
