--- a/index.html
+++ b/index.html
@@ -76,21 +76,32 @@
         <div class="slideshow-container">
 
             <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
+                
                 <img class=" img-slide" src="/Portafolio/img/img1.jpg" >
-                <div class="text"></div>
+                <div class="numbertext">
+                    <h1> John Wooden </h1>
+                    <p> Haz de cada día tu obra maestra.</p>
+                    
+                </div>
+                <!-- <div class="text"> aksdlasjdls</div> -->
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
                 <img class=" img-slide"  src="/Portafolio/img/img2.jpg">
-                <div class="text"></div>
+                <div class="numbertext">
+                    <h1>Benjamin Franklin</h1>
+                    <p> Cuéntamelo y me olvidaré. enséñamelo y lo recordaré. involúcrame y lo aprenderé. </p>
+                </div>
+                <!-- <div class="text"></div> -->
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
                 <img class=" img-slide"  src="/Portafolio/img/img4.jpg">
-                <div class="text"></div>
+                <div class="numbertext">
+                    <h1>Confucio</h1>
+                    <p> Escoge un trabajo que te guste, y nunca tendrás que trabajar ni un solo día de tu vida.</p>
+                </div>
+                <!-- <div class="text"></div> -->
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
